--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "5.7.0",
     "@tinymce/tinymce-react": "4.3.2",
     "html-to-react": "1.7.0",
+    "jose": "^5.1.3",
     "next": "14.0.4",
     "puppeteer": "21.6.1",
     "react": "18",
@@ -29,6 +30,7 @@
     "react-icons": "4.12.0",
     "store": "2.0.12",
     "ts-node": "10.9.2",
+    "universal-cookie": "^6.1.1",
     "zustand": "4.4.7"
   },
   "devDependencies": {
