--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "autoprefixer": "10.0.1",
     "eslint": "8",
     "eslint-config-next": "14.0.4",
+    "eslint-plugin-sonarjs": "^0.23.0",
     "postcss": "8.4.32",
     "prisma": "5.7.0",
     "tailwindcss": "3.3.0",
