--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@prisma/client": "5.7.0",
     "@tinymce/tinymce-react": "4.3.2",
     "html-to-react": "1.7.0",
-    "jose": "^5.1.3",
+    "jose": "5.1.3",
     "next": "14.0.4",
     "puppeteer": "21.6.1",
     "react": "18",
@@ -34,14 +34,14 @@
     "zustand": "4.4.7"
   },
   "devDependencies": {
-    "@sparticuz/chromium": "^119.0.2",
+    "@sparticuz/chromium": "119.0.2",
     "@types/node": "20",
     "@types/react": "18",
     "@types/react-dom": "18",
     "autoprefixer": "10.0.1",
     "eslint": "8",
     "eslint-config-next": "14.0.4",
-    "eslint-plugin-sonarjs": "^0.23.0",
+    "eslint-plugin-sonarjs": "0.23.0",
     "postcss": "8.4.32",
     "prisma": "5.7.0",
     "tailwindcss": "3.3.0",
