--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "dev": "prisma generate && next dev",
-    "build": "npx puppeteer browsers install chrome && prisma generate && next build",
+    "build": "prisma generate && next build",
+    "build-old": "npx puppeteer browsers install chrome && prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
