--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@prisma/client": "5.7.0",
     "@tinymce/tinymce-react": "4.3.2",
+    "date-fns": "^4.1.0",
     "html-to-react": "1.7.0",
     "jose": "5.1.3",
     "next": "14.0.4",
